kubernetes/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/marcelfrey29/iu-docc-secure-software-development-backend:latest
          imagePullPolicy: "Never" # Use local image we built
          resources:
            requests:
              memory: "64Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "512m"
          ports:
            - containerPort: 3000
              name: backend-port
