kubernetes/postgres.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "Prevent PostgreSQL crash loop"
    ignore-check.kube-linter.io/run-as-non-root: "Prevent PostgreSQL crash loop"
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18.1
          resources:
            requests:
              memory: "512Mi"
              cpu: "512m"
            limits:
              memory: "1024Mi"
              cpu: "1024m"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data/
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres
