kubernetes/web-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "Prevent nginx crash loop"
    ignore-check.kube-linter.io/latest-tag: "We accept the latest image for this project"
spec:
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: ghcr.io/marcelfrey29/iu-docc-secure-software-development-web-app:latest
          imagePullPolicy: "Never" # Use local image we built
          resources:
            requests:
              memory: "64Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "512m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          ports:
            - containerPort: 80
              name: web-app-port
