kubernetes/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8012
      targetPort: backend-port
  type: LoadBalancer
