kubernetes/backend.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  labels:
    name: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: social-recipe-api.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend
                port:
                  number: 8012
